// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform should transform in a JS entity 1`] = `
Object {
  "addr1": "30 bis rue du Général de Gaulle",
  "addr2": "",
  "canDoPostMortem": false,
  "depCode": "94",
  "finesseNumber": "1273768",
  "id": 3,
  "name": "CHU de Vincennes",
  "postalCode": "94300",
  "town": "Vincennes",
}
`;

exports[`untransform should untransform in a DB entity 1`] = `
Object {
  "addr1": "30 bis rue du Général de Gaulle",
  "addr2": "",
  "dep_code": "94",
  "extra_data": Object {
    "canDoPostMortem": false,
  },
  "finesse_number": "1273768",
  "id": 3,
  "name": "CHU de Vincennes",
  "postal_code": "94300",
  "town": "Vincennes",
}
`;

exports[`untransform should untransform in a DB entity even with empty string id 1`] = `
Object {
  "addr1": "30 bis rue du Général de Gaulle",
  "addr2": "",
  "dep_code": "94",
  "extra_data": Object {
    "canDoPostMortem": false,
  },
  "finesse_number": "1273768",
  "name": "CHU de Vincennes",
  "postal_code": "94300",
  "town": "Vincennes",
}
`;

exports[`untransform should untransform in a DB entity even with null id 1`] = `
Object {
  "addr1": "30 bis rue du Général de Gaulle",
  "addr2": "",
  "dep_code": "94",
  "extra_data": Object {
    "canDoPostMortem": false,
  },
  "finesse_number": "1273768",
  "name": "CHU de Vincennes",
  "postal_code": "94300",
  "town": "Vincennes",
}
`;
